[package]
name = "eth_filter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.3"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
tokio = { version = "1.13.0", features = ["full"] }
lazy_static = "1.4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
redis = { version = "0.21.4", features = ["tokio-comp"] }
